--- a/module_person/src/main/res/layout/fragment_detail_message.xml
+++ b/module_person/src/main/res/layout/fragment_detail_message.xml
@@ -25,32 +25,36 @@
 
             <TextView
                 android:id="@+id/detail_message_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:textColor="@color/black"
-                android:textSize="14sp"
-                android:layout_marginTop="16dp" />
+                android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                />
 
             <TextView
                 android:id="@+id/detail_message_time"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_marginTop="4dp"/>
+                android:textSize="10sp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"/>
             <TextView
                 android:id="@+id/detail_message_content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="4dp"
+                android:gravity="left" />
 
         </LinearLayout>
 
